--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
 
-  <title>CVV Dinámico</title>
+  <title>Banco Andino</title>
 </head>
 <body>
 <div id="root"></div>
